# project-management-api

./: .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 9ceebcee1a77_create_projects_table.py
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: health.py  projects.py
app/core/: config.py
app/crud/: project.py
app/db/: base.py  dependencies.py  engine.py  session.py  test_engine.py
app/models/: mixins.py  project.py
app/schemas/: __init__.py  project.py
tests/: conftest.py  test_health.py
