[project]
name = "project-management-api"
version = "0.1.0"
description = "A production-ready project management API built with FastAPI"
authors = ["Reece Harries"]
readme = "README.md"
license = "MIT"
license-files = "LICENSE"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
